Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/databases-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/databases-dev-services.adoc.po
@@ -124,13 +124,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/databases-dev-services.adoc:55
 msgid "An example file is shown below:"
-msgstr ""
+msgstr "ファイルの例を以下に示します。"
 
 #. type: Block title
 #: upstream/_versions/main/guides/databases-dev-services.adoc:56
 #, no-wrap
 msgid "src/main/resources/container-license-acceptance.txt"
-msgstr ""
+msgstr "src/main/resources/container-license-acceptance.txt"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/databases-dev-services.adoc:60
@@ -176,7 +176,7 @@ msgstr ""
 #: upstream/_versions/main/guides/databases-dev-services.adoc:78
 #, no-wrap
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/databases-dev-services.adoc:81
