--- a/l10n/po/ja_JP/_versions/main/guides/security.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-29 02:40+0000\n"
+"POT-Creation-Date: 2022-05-21 02:36+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -466,8 +466,9 @@ msgstr ""
 
 #. type: Table
 #: upstream/_versions/main/guides/security.adoc:186
-#, no-wrap
-msgid "Custom Token Verificition"
+#, fuzzy, no-wrap
+#| msgid "Custom Token Verificition"
+msgid "Custom Token Verification"
 msgstr "カスタムトークン検証"
 
 #. type: Table
