--- a/l10n/po/ja_JP/_includes/get-started-code-steps.html.po
+++ b/l10n/po/ja_JP/_includes/get-started-code-steps.html.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-03-31 18:13+0000\n"
+"POT-Creation-Date: 2022-05-21 22:12+0000\n"
 "PO-Revision-Date: 2022-04-12 15:05+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -63,7 +63,9 @@ msgstr ""
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/get-started-code-steps.html:24
-msgid "If it's your first time to install, you'll need ot restart your shell."
+#, fuzzy
+#| msgid "If it's your first time to install, you'll need ot restart your shell."
+msgid "If it's your first time to install, you'll need to restart your shell."
 msgstr "初めてのインストールの場合は、シェルを再起動する必要があります。"
 
 #. type: Content of: <div><div><div><h4>
