--- a/l10n/po/ja_JP/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-05-21 22:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-05-23 23:01+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:1
@@ -26,7 +26,7 @@ msgstr "gsmet"
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:1
 #, no-wrap
 msgid "2022-05-17"
-msgstr ""
+msgstr "2022-05-17"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:1
@@ -38,7 +38,7 @@ msgstr "post"
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:1
 #, no-wrap
 msgid "2.9.1.Final is the first maintenance release for our 2.9 release train."
-msgstr ""
+msgstr "2.9.1.Final は、2.9 リリーストレインの最初のメンテナンスリリースです。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:1
@@ -50,22 +50,22 @@ msgstr "release"
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:1
 #, no-wrap
 msgid "Quarkus 2.9.1.Final released - Maintenance release"
-msgstr ""
+msgstr "Quarkus 2.9.1.Finalリリース - メンテナンスリリース"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:11
 msgid "It is my pleasure to announce the availability of Quarkus 2.9.1.Final, the first maintenance release of our 2.9 release."
-msgstr ""
+msgstr "2.9リリースの最初のメンテナンスリリースであるQuarkus 2.9.1.Finalのリリースを発表できることを嬉しく思います。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:13
 msgid "It is a safe upgrade for anyone already using 2.9."
-msgstr ""
+msgstr "これは、すでに2.9を使用している人には安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:15
 msgid "If you are not using 2.9 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.9[2.9 migration guide]."
-msgstr ""
+msgstr "2.9 をまだ使用していない場合は、https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.9[2.9 移行ガイド] を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:16
@@ -76,7 +76,7 @@ msgstr "完全な変更履歴"
 #. type: Plain text
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:19
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.9.1.Final[the full changelog of 2.9.1.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.9.1.Final[2.9.1.Finalの完全な変更履歴はGitHub]に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc:20
