--- a/l10n/stats/override.csv
+++ b/l10n/stats/override.csv
@@ -7,4 +7,5 @@ l10n/override/ja_JP/_layouts/insights.html, 2021-12-03 01:32:18 +0000, 2021-12-0
 l10n/override/ja_JP/_layouts/guides-index.html, 2022-02-02 06:50:38 +0000, 2022-01-25 12:24:24 +0000, OK
 l10n/override/ja_JP/_layouts/quarkus2.html, 2021-12-03 15:20:57 +0000, 2021-12-01 20:34:05 +0000, OK
 l10n/override/ja_JP/_layouts/extensions.html, 2021-02-06 14:23:31 +0000, 2019-08-01 09:53:08 +0000, OK
+l10n/override/ja_JP/_layouts/guides.html, 2022-05-23 13:20:11 +0000, 2021-12-22 16:02:43 +0000, OK
 l10n/override/ja_JP/_guides/guides.md, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:44 +0000, OK
