--- a/l10n/po/ja_JP/_versions/2.2/guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/kafka-schema-registry-avro.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-12 13:15+0000\n"
+"POT-Creation-Date: 2022-05-23 20:11+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1038,7 +1038,7 @@ msgid ""
 "        registry.start();\n"
 "        Map<String, String> properties = new HashMap<>();\n"
 "        properties.put(\"mp.messaging.connector.smallrye-kafka.apicurio.registry.url\",\n"
-"                \"http://\" + registry.getContainerIpAddress() + \":\" + registry.getMappedPort(8080) + \"/apis/registry/v2\");\n"
+"                \"http://\" + registry.getHost() + \":\" + registry.getMappedPort(8080) + \"/apis/registry/v2\");\n"
 "        properties.put(\"kafka.bootstrap.servers\", kafka.getBootstrapServers());\n"
 "        return properties;\n"
 "    }\n"
