--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -246,6 +246,7 @@ l10n/po/ja_JP/_guides/kogito-dev-services-build-time-config.adoc.po, 7, 16, 301,
 l10n/po/ja_JP/_guides/README.adoc.po, 72, 76, 302, 307 ,2%
 l10n/po/ja_JP/_guides/smallrye-kafka-outgoing.adoc.po, 85, 85, 954, 954 ,0%
 l10n/po/ja_JP/_guides/smallrye-kafka-incoming.adoc.po, 101, 101, 1205, 1205 ,0%
+l10n/po/ja_JP/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc.po, 0, 61, 0, 663 ,100%
 l10n/po/ja_JP/_posts/2022-05-17-quarkus-2-9-1-final-released.adoc.po, 0, 18, 0, 149 ,100%
 l10n/po/ja_JP/_posts/2022-05-13-quarkus-newsletter-20.adoc.po, 0, 12, 0, 272 ,100%
 l10n/po/ja_JP/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc.po, 0, 62, 0, 807 ,100%
