Apply translation memory

--- a/l10n/po/ja_JP/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
 #, no-wrap
 msgid "jeffmaury"
-msgstr ""
+msgstr "jeffmaury"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
@@ -32,7 +32,7 @@ msgstr ""
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
 #, no-wrap
 msgid "post"
-msgstr ""
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
@@ -44,7 +44,7 @@ msgstr ""
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
 #, no-wrap
 msgid "announcement ide"
-msgstr ""
+msgstr "announcement ide"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
@@ -82,7 +82,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:23
 msgid "Now any `Template` attribute will show the option to generate a corresponding Qute template, or navigate to the existing template file."
-msgstr ""
+msgstr "これで、どの `Template` 属性にも、対応する Qute テンプレートを生成するか、既存のテンプレート・ファイルに移動するかのオプションが表示されるようになりました。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:25
@@ -110,7 +110,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:34
 msgid "The Qute language server has support for built-in and user-defined Java classes, including parameter completion and validation for their methods. Take advantage of this to easily avoid Java related mistakes."
-msgstr ""
+msgstr "Qute言語サーバーは、ビルトインおよびユーザー定義のJavaクラスをサポートしており、そのメソッドに対するパラメータ補完や検証を行うことができます。これを利用して、Javaに関連するミスを簡単に回避してください。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:35
@@ -127,7 +127,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:40
 msgid "Alongside support for Java completion and validation, the extension also supports type hovering for built-in and user-defined Java classes."
-msgstr ""
+msgstr "Java補完と検証のサポートに加え、組み込みおよびユーザー定義のJavaクラスに対するタイプホバーリングもサポートしています。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:41
@@ -236,7 +236,7 @@ msgstr ""
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:79
 #, no-wrap
 msgid "Configs all the way down"
-msgstr ""
+msgstr "設定の全貌"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:82
@@ -286,7 +286,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:98
 msgid "In this example, the `@ApplicationPath` is set to `/api`, and the code on the method declaration (below) takes that into account when generating the URL."
-msgstr ""
+msgstr "この例では、 `@ApplicationPath` は `/api` に設定されており、メソッド宣言上のコード（下記）はそれを考慮して URL を生成しています。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:99
@@ -303,7 +303,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:104
 msgid "At the end of the day, everyone wants to spend less time trying to hunt down some obscure setting, and more time developing the logic."
-msgstr ""
+msgstr "結局のところ、誰もが、よくわからない設定を追い求める時間を減らし、ロジックの開発に時間をかけたいと思うものなのです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:106
@@ -331,23 +331,23 @@ msgstr ""
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:114
 #, no-wrap
 msgid "Moving Forward"
-msgstr ""
+msgstr "今後に向けて"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:118
 msgid "If you have any questions, suggestions or feedback, by all means please https://github.com/redhat-developer/intellij-quarkus/issues[open an issue]."
-msgstr ""
+msgstr "ご質問、ご提案、ご意見などがございましたら、ぜひ link:https://github.com/redhat-developer/intellij-quarkus/issues[課題]を提起してください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:120
 msgid "Thank you for reading and stay tuned for the next release!"
-msgstr ""
+msgstr "お読みいただきありがとうございました。次のリリースをお待ちください!"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:121
 #, no-wrap
 msgid "Links"
-msgstr ""
+msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:124
@@ -357,4 +357,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:124
 msgid "Open an issue: https://github.com/redhat-developer/intellij-quarkus/issues"
-msgstr ""
+msgstr "課題を開く https://github.com/redhat-developer/intellij-quarkus/issues"
