--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-core-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-core-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-12 02:42+0000\n"
+"POT-Creation-Date: 2022-05-25 02:44+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -242,7 +242,7 @@ msgstr "`true`"
 #: upstream/_generated-config/main/config/quarkus-core-general-config-items.adoc:83
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.fernflower.enabled]]`link:#quarkus-core-general-config-items_quarkus.package.fernflower.enabled[quarkus.package.fernflower.enabled]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.quiltflower.enabled]]`link:#quarkus-core-general-config-items_quarkus.package.quiltflower.enabled[quarkus.package.quiltflower.enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -254,11 +254,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-core-general-config-items.adoc:92
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.fernflower.hash]]`link:#quarkus-core-general-config-items_quarkus.package.fernflower.hash[quarkus.package.fernflower.hash]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.quiltflower.version]]`link:#quarkus-core-general-config-items_quarkus.package.quiltflower.version[quarkus.package.quiltflower.version]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"The git hash to use to download the fernflower tool from https://jitpack.io/com/github/fesh0r/fernflower/\n"
+"The version of Quiltflower to use\n"
 "--"
 msgstr ""
 
@@ -289,14 +289,14 @@ msgstr "string"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-core-general-config-items.adoc:96
 #, no-wrap
-msgid "`dbf407a655`"
+msgid "`1.8.1`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-core-general-config-items.adoc:101
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.fernflower.jar-directory]]`link:#quarkus-core-general-config-items_quarkus.package.fernflower.jar-directory[quarkus.package.fernflower.jar-directory]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.quiltflower.jar-directory]]`link:#quarkus-core-general-config-items_quarkus.package.quiltflower.jar-directory[quarkus.package.quiltflower.jar-directory]`\n"
 "\n"
 "[.description]\n"
 "--\n"
