--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-core.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-core.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-19 02:47+0000\n"
+"POT-Creation-Date: 2022-05-25 02:44+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1602,7 +1602,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-core.adoc:872
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.fernflower.enabled]]`link:#quarkus-core_quarkus.package.fernflower.enabled[quarkus.package.fernflower.enabled]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.quiltflower.enabled]]`link:#quarkus-core_quarkus.package.quiltflower.enabled[quarkus.package.quiltflower.enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -1614,25 +1614,25 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-core.adoc:881
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.fernflower.hash]]`link:#quarkus-core_quarkus.package.fernflower.hash[quarkus.package.fernflower.hash]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.quiltflower.version]]`link:#quarkus-core_quarkus.package.quiltflower.version[quarkus.package.quiltflower.version]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"The git hash to use to download the fernflower tool from https://jitpack.io/com/github/fesh0r/fernflower/\n"
+"The version of Quiltflower to use\n"
 "--"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-core.adoc:885
 #, no-wrap
-msgid "`dbf407a655`"
+msgid "`1.8.1`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-core.adoc:890
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.fernflower.jar-directory]]`link:#quarkus-core_quarkus.package.fernflower.jar-directory[quarkus.package.fernflower.jar-directory]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-core_quarkus.package.quiltflower.jar-directory]]`link:#quarkus-core_quarkus.package.quiltflower.jar-directory[quarkus.package.quiltflower.jar-directory]`\n"
 "\n"
 "[.description]\n"
 "--\n"
