--- a/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-12 02:47+0000\n"
+"POT-Creation-Date: 2022-05-25 02:49+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1523,7 +1523,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:717
-msgid "Response filters are not invoked on streamed responses, because they would give a false impression that you can set headers or HTTP status codes, which is not true after the initial response."
+msgid "Response filters are **not** invoked on streamed responses, because they would give a false impression that you can set headers or HTTP status codes, which is not true after the initial response. Exception mappers are also not invoked because part of the response may already have been written."
 msgstr ""
 
 #. type: Title ===
