--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-jib-jib-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-jib-jib-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-09 02:29+0000\n"
+"POT-Creation-Date: 2022-05-25 02:44+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -387,6 +387,19 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:193
+#: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:202
 #, no-wrap
 msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-jib-jib-config.adoc:201
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-jib-jib-config_quarkus.jib.docker-environment-docker-environment]]`link:#quarkus-jib-jib-config_quarkus.jib.docker-environment-docker-environment[quarkus.jib.docker-environment]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Sets environment variables used by the Docker executable. This is only used by Jib when the container image is being built locally.\n"
+"--"
 msgstr ""
