--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-package-pkg-package-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-package-pkg-package-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-12 02:42+0000\n"
+"POT-Creation-Date: 2022-05-25 02:45+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -287,7 +287,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-package-pkg-package-config.adoc:156
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.fernflower.enabled]]`link:#quarkus-package-pkg-package-config_quarkus.package.fernflower.enabled[quarkus.package.fernflower.enabled]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.quiltflower.enabled]]`link:#quarkus-package-pkg-package-config_quarkus.package.quiltflower.enabled[quarkus.package.quiltflower.enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -299,25 +299,25 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-package-pkg-package-config.adoc:165
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.fernflower.hash]]`link:#quarkus-package-pkg-package-config_quarkus.package.fernflower.hash[quarkus.package.fernflower.hash]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.quiltflower.version]]`link:#quarkus-package-pkg-package-config_quarkus.package.quiltflower.version[quarkus.package.quiltflower.version]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"The git hash to use to download the fernflower tool from https://jitpack.io/com/github/fesh0r/fernflower/\n"
+"The version of Quiltflower to use\n"
 "--"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-package-pkg-package-config.adoc:169
 #, no-wrap
-msgid "`dbf407a655`"
+msgid "`1.8.1`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-package-pkg-package-config.adoc:174
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.fernflower.jar-directory]]`link:#quarkus-package-pkg-package-config_quarkus.package.fernflower.jar-directory[quarkus.package.fernflower.jar-directory]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.quiltflower.jar-directory]]`link:#quarkus-package-pkg-package-config_quarkus.package.quiltflower.jar-directory[quarkus.package.quiltflower.jar-directory]`\n"
 "\n"
 "[.description]\n"
 "--\n"
