--- a/l10n/po/ja_JP/_versions/main/guides/security.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-21 02:36+0000\n"
+"POT-Creation-Date: 2022-05-25 02:49+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -206,7 +206,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security.adoc:95
-msgid "See the xref:security-openid-connect-client.adoc[Using OpenID Connect and OAuth2 Client] guide for more information."
+msgid "See the xref:security-openid-connect-client.adoc[OpenID Connect and Token Propagation Quickstart] and xref:security-openid-connect-client-reference.adoc[OpenID Connect and OAuth2 Client Reference] guides for more information."
 msgstr ""
 
 #. type: Title ===
