--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
@@ -44,18 +44,18 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:17
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:22
 msgid "https://stedolan.github.io/jq/[jq tool]"
-msgstr ""
+msgstr "https://stedolan.github.io/jq/[jq tool]"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:23
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:26
@@ -117,17 +117,17 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:43
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:47
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:49
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:51
@@ -143,7 +143,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:55
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:61
@@ -158,13 +158,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:68
 msgid "This will add the following to your build file:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます:"
 
 #. type: Block title
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:70
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:88
@@ -192,7 +192,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:91
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:94
@@ -204,7 +204,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:96
 #, no-wrap
 msgid "Writing the application"
-msgstr ""
+msgstr "アプリケーションの記述"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:99
@@ -614,7 +614,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:295
 #, no-wrap
 msgid "Configuring the application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:298
@@ -735,7 +735,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:340
 msgid "To start a Keycloak Server you can use Docker and just run the following command:"
-msgstr ""
+msgstr "Keycloak サーバーを起動するにはDockerを使用し、以下のコマンドを実行するだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:344
@@ -756,7 +756,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:351
 msgid "Log in as the `admin` user to access the Keycloak Administration Console. Username should be `admin` and password `admin`."
-msgstr ""
+msgstr "Keycloak 管理コンソールにアクセスするには、 `admin` ユーザーとしてログインしてください。ユーザー名は `admin` 、パスワードは `admin` です。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:353
@@ -839,12 +839,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:383
 msgid "First compile it:"
-msgstr ""
+msgstr "まずコンパイルします。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:387
 msgid "Then run it:"
-msgstr ""
+msgstr "次に、以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:391
@@ -861,22 +861,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:396
 msgid "This same demo can be compiled into native code: no modifications required."
-msgstr ""
+msgstr "同じデモをネイティブコードにコンパイルすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:400
 msgid "This implies that you no longer need to install a JVM on your production environment, as the runtime technology is included in the produced binary, and optimized to run with minimal resource overhead."
-msgstr ""
+msgstr "これは、生成されたバイナリーにランタイム技術が含まれており、最小限のリソースオーバーヘッドで実行できるように最適化されているため、本番環境にJVMをインストールする必要がないことを意味します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:403
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build again by enabling the `native` profile:"
-msgstr ""
+msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトで無効になっています。 `native` プロファイルを有効にして再度ビルドしてみましょう。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:407
 msgid "After getting a cup of coffee, you'll be able to run this binary directly:"
-msgstr ""
+msgstr "コーヒーを飲み終わると、このバイナリーは以下のように直接実行出来るようになります:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:411
@@ -888,7 +888,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:413
 #, no-wrap
 msgid "Testing the Application"
-msgstr ""
+msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:416
