Update .po files

--- a/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:50+0900\n"
+"POT-Creation-Date: 2022-05-25 16:13+0000\n"
 "PO-Revision-Date: 2021-04-21 15:03+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -678,7 +678,7 @@ msgstr "DeploymentConfigの代わりにDeploymentを使用する"
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:357
 #, fuzzy
-msgid "Out of the box the extension will generate a `DeploymentConfig` resource. Often users, prefer to use `Deployment` as the main deployment resource, but still make use of Openshift specific resources like `Route`, `BuildConfig` etc.  This feature is enabled by setting `quarkus.openshift.deployment-kind` to `Deployment`."
+msgid "Out of the box the extension will generate a `DeploymentConfig` resource. Often users, prefer to use `Deployment` as the main deployment resource, but still make use of OpenShift specific resources like `Route`, `BuildConfig` etc.  This feature is enabled by setting `quarkus.openshift.deployment-kind` to `Deployment`."
 msgstr "このエクステンションは、すぐに `DeploymentConfig` リソースを生成します。多くのユーザーは、メインのデプロイメントリソースとして `Deployment` を使用しながらも、 `Route` 、 `BuildConfig` などの Openshift 固有のリソースを利用したいと考えています。この機能は、 `quarkus.openshift.deployment-kind` を `Deployment` に設定することで有効になります。"
 
 #. type: delimited block -
@@ -690,7 +690,7 @@ msgstr "quarkus.openshift.route.expose=true\n"
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:365
 #, fuzzy
-msgid "Since `Deployment` is a Kubernetes resource and not Openshift specific, it can't possibly leverage `ImageStream` resources, as is the case with `DeploymentConfig`. This means that the image references need to include the container image registry that hosts the image.  When the image is built, using Openshift builds (s2i binary and docker strategy) the Openshift internral image registry `image-registry.openshift-image-registry.svc:5000` will be used, unless an other registry has been explicitly specified by the user. Please note, that in the internal registry the project/namespace name is added as part of the image repository: `image-registry.openshift-image-registry.svc:5000/<project name>/<name>:<tag>`, so users will need to make sure that the target project/namespace name is aligned with the `quarkus.container-image.group`."
+msgid "Since `Deployment` is a Kubernetes resource and not OpenShift specific, it can't possibly leverage `ImageStream` resources, as is the case with `DeploymentConfig`. This means that the image references need to include the container image registry that hosts the image.  When the image is built, using OpenShift builds (s2i binary and docker strategy) the OpenShift internal image registry `image-registry.openshift-image-registry.svc:5000` will be used, unless an other registry has been explicitly specified by the user. Please note, that in the internal registry the project/namespace name is added as part of the image repository: `image-registry.openshift-image-registry.svc:5000/<project name>/<name>:<tag>`, so users will need to make sure that the target project/namespace name is aligned with the `quarkus.container-image.group`."
 msgstr "`Deployment` はKubernetesのリソースであり、Openshift固有のものではないため、 `DeploymentConfig` のように `ImageStream` のリソースを活用することはできません。このため、イメージの参照には、イメージをホストするコンテナイメージレジストリを含める必要があります。イメージがビルドされる際、Openshift のビルド（s2i バイナリおよび docker 戦略）を使用する場合、ユーザーが他のレジストリを明示的に指定していない限り、Openshift の内部イメージレジストリ `image-registry.openshift-image-registry.svc:5000` が使用されます。内部レジストリでは、プロジェクト/名前空間名がイメージリポジトリの一部として追加されることに注意してください： `image-registry.openshift-image-registry.svc:5000/<project name&amp;gt;/<name&amp;gt;:<tag&amp;gt;` したがって、ユーザーはターゲットのプロジェクト/名前空間名が `quarkus.container-image.group` と一致していることを確認する必要があります。"
 
 #. type: delimited block -
