--- a/l10n/po/ja_JP/_guides/security.adoc.po
+++ b/l10n/po/ja_JP/_guides/security.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-05-11 10:12+0000\n"
+"POT-Creation-Date: 2022-05-25 16:13+0000\n"
 "PO-Revision-Date: 2022-05-12 08:55+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -465,8 +465,9 @@ msgstr "InnerSigned/EncryptedまたはEncryptedトークン"
 
 #. type: Table
 #: upstream/_guides/security.adoc:186
-#, no-wrap
-msgid "Custom Token Verificition"
+#, fuzzy, no-wrap
+#| msgid "Custom Token Verificition"
+msgid "Custom Token Verification"
 msgstr "カスタムトークン検証"
 
 #. type: Table
