--- a/l10n/po/ja_JP/_guides/kubernetes-config.adoc.po
+++ b/l10n/po/ja_JP/_guides/kubernetes-config.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:50+0900\n"
+"POT-Creation-Date: 2022-05-25 16:13+0000\n"
 "PO-Revision-Date: 2022-02-03 10:35+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -27,7 +27,9 @@ msgstr "Kubernetes Config"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:12
-msgid "Quarkus includes the `kubernetes-config` extension which allows developers to use Kubernetes https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] and https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] as a configuration source, without having to mount them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] running the Quarkus application or make any other modifications to their Kubernetes `Deployment` (or Openshift `DeploymentConfig`)."
+#, fuzzy
+#| msgid "Quarkus includes the `kubernetes-config` extension which allows developers to use Kubernetes https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] and https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] as a configuration source, without having to mount them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] running the Quarkus application or make any other modifications to their Kubernetes `Deployment` (or Openshift `DeploymentConfig`)."
+msgid "Quarkus includes the `kubernetes-config` extension which allows developers to use Kubernetes https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] and https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] as a configuration source, without having to mount them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] running the Quarkus application or make any other modifications to their Kubernetes `Deployment` (or OpenShift `DeploymentConfig`)."
 msgstr "Quarkusには、 `kubernetes-config` エクステンションが含まれており、開発者はKubernetes link:https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] と link:https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] を Quarkusアプリケーションを実行している link:https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] にマウントしなくても設定ソースとして使用することができます。"
 
 #. type: Title ==
