--- a/l10n/po/ja_JP/_guides/vertx.adoc.po
+++ b/l10n/po/ja_JP/_guides/vertx.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-19 17:17+0000\n"
+"POT-Creation-Date: 2022-05-25 16:12+0000\n"
 "PO-Revision-Date: 2022-02-03 10:12+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -463,7 +463,16 @@ msgstr "`VertxResource` クラスに以下のメソッドを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/vertx.adoc:233
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "@GET\n"
+#| "@Path(\"/web\")\n"
+#| "public Uni<JsonArray> retrieveDataFromWikipedia() {                     // <1>\n"
+#| "    return client.getAbs(URL).send()                                    // <2>\n"
+#| "            .onItem().transform(HttpResponse::bodyAsJsonObject)         // <3>\n"
+#| "            .onItem().transform(json -> json.getJsonObject(\"parse\")     // <4>\n"
+#| "                                        .getJsonArray(\"langlinks\"));\n"
+#| "}\n"
 msgid ""
 "@GET\n"
 "@Path(\"/book\")\n"
@@ -472,10 +481,18 @@ msgid ""
 "                    new OpenOptions().setRead(true)\n"
 "            )\n"
 "            .onItem().transformToMulti(file -> file.toMulti())                       // <3>\n"
-"            .onItem().transform(content -> content.toString(StandardCharsets.UTF_8)) // <4>\n"
+"            .onItem().transform(content -> content.toString(StandardCharsets.UTF_8) // <4>\n"
 "                    + \"\\n------------\\n\");                                           // <5>\n"
 "}\n"
 msgstr ""
+"@GET\n"
+"@Path(\"/web\")\n"
+"public Uni<JsonArray> retrieveDataFromWikipedia() {                     // <1>\n"
+"    return client.getAbs(URL).send()                                    // <2>\n"
+"            .onItem().transform(HttpResponse::bodyAsJsonObject)         // <3>\n"
+"            .onItem().transform(json -> json.getJsonObject(\"parse\")     // <4>\n"
+"                                        .getJsonArray(\"langlinks\"));\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_guides/vertx.adoc:235
