Apply translation memory

--- a/l10n/po/ja_JP/_posts/2022-05-31-banco-do-brasil-open-banking-user-story.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-31-banco-do-brasil-open-banking-user-story.adoc.po
@@ -32,7 +32,7 @@ msgstr ""
 #: upstream/_posts/2022-05-31-banco-do-brasil-open-banking-user-story.adoc:1
 #, no-wrap
 msgid "post"
-msgstr ""
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-05-31-banco-do-brasil-open-banking-user-story.adoc:1
@@ -86,7 +86,7 @@ msgstr ""
 #: upstream/_posts/2022-05-31-banco-do-brasil-open-banking-user-story.adoc:23
 #, no-wrap
 msgid "The Challenge"
-msgstr ""
+msgstr "チャレンジ"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-31-banco-do-brasil-open-banking-user-story.adoc:26
@@ -198,7 +198,7 @@ msgstr ""
 #: upstream/_posts/2022-05-31-banco-do-brasil-open-banking-user-story.adoc:68
 #, no-wrap
 msgid "Observability"
-msgstr ""
+msgstr "Observability"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-31-banco-do-brasil-open-banking-user-story.adoc:71
