Translate 2022-05-23-intellij-quarkus-tools-1.11.0.adoc.po

--- a/l10n/po/ja_JP/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-05-23 20:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-05-27 22:21+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
@@ -24,7 +24,7 @@ msgstr "jeffmaury"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2022-05-23"
 msgstr "2022-05-23"
 
@@ -36,9 +36,9 @@ msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "This release adds support for Qute templates"
-msgstr "このリリースでは、Quteテンプレートがサポートされます。"
+msgstr "このリリースでは、Quteテンプレートのサポートが追加されています。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
@@ -48,37 +48,34 @@ msgstr "announcement ide"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus Tools for IntelliJ 1.11.0 released!"
 msgstr "Quarkus Tools for IntelliJ 1.11.0リリース!"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:13
-#, fuzzy
 msgid "We are very pleased to announce the 1.11.0 release of Quarkus Tools for IntelliJ.  This release adds support for Qute templates but also align with LSP4MP 0.4.0 and quarkus-ls 0.11.1."
 msgstr "Quarkus Tools for IntelliJの1.11.0リリースを発表できることを大変嬉しく思います。このリリースでは、Quteテンプレートのサポートが追加され、LSP4MP 0.4.0およびquarkus-ls 0.11.1との整合性もとられています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:14
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Qute templates"
 msgstr "Quteテンプレート"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:17
-#, fuzzy
 msgid "When a Quarkus project has Qute in the classpath, editing a Qute template (HTML / JSON / YAML / Text) will add new features into the editor."
-msgstr "QuarkusプロジェクトのクラスパスにQuteがある場合、Quteテンプレート（HTML / JSON / YAML / Text）を編集すると、エディタに新機能が追加されます。"
+msgstr "QuarkusプロジェクトのクラスパスにQuteがある場合、Quteテンプレート（HTML / JSON / YAML / Text）の編集は、エディタに新機能を追加します。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:19
-#, fuzzy
 msgid "Let's do a little tour."
-msgstr "ちょっと見学してみましょう。"
+msgstr "ちょっと見てみましょう。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:20
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Integration between Qute templates and Java"
 msgstr "QuteテンプレートとJavaの連携"
 
@@ -95,7 +92,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:28
-#, fuzzy
 msgid "All Qute files paired with a corresponding Java resource support a number of language client features, such as go to definition, hover, autocompletion, etc.. Each of these we will explore further in the article"
 msgstr "対応するJavaリソースと組み合わされた全てのQuteファイルは、定義への移動、ホバー、オートコンプリートなど、多くの言語クライアント機能をサポートしています。これらの各機能については、記事でさらに詳しく説明します。"
 
@@ -107,7 +103,7 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:31
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Method Parameter Support in Qute Templates"
 msgstr "Quteテンプレートにおけるメソッドパラメータのサポート"
 
@@ -124,7 +120,7 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:37
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Java Type Hover Support for Qute Templates"
 msgstr "QuteテンプレートのJavaタイプホバーサポート"
 
@@ -141,15 +137,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:43
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Qute Section Completion"
-msgstr "Quteセクションの完成"
+msgstr "Quteセクションの補完"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:46
-#, fuzzy
 msgid "Qute templates use sections in its templating language to power any logic required when compiling and displaying the resulting document. To support this, the extension’s Qute support populates a completion list with all available Qute sections, along with any parameters they take and a small code snippet of their usage."
-msgstr "Quteテンプレートは、テンプレート言語のセクションを使用して、結果のドキュメントをコンパイルして表示する際に必要なロジックを実行します。これをサポートするために、拡張機能のQuteサポートは、利用可能なすべてのQuteセクションと、それらが取るパラメータ、およびそれらの使用法の小さなコードスニペットを補完リストに入力します。"
+msgstr "Quteテンプレートは、テンプレート言語のセクションを使用して、結果のドキュメントをコンパイルして表示する際に必要なロジックを実行します。これをサポートするために、エクステンションのQuteサポートは、利用可能なすべてのQuteセクションと、それらが取るパラメータ、およびそれらの使用法の小さなコードスニペットを補完リストに入力します。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:47
@@ -159,15 +154,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:49
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Support for Qute Validation"
 msgstr "Qute Validationのサポート"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:52
-#, fuzzy
 msgid "Java and Qute validation is included for Qute templates with Quarkus Tools for IntelliJ, including diagnostics."
-msgstr "Quarkus Tools for IntelliJを使用したQuteテンプレートには、JavaおよびQuteの検証が含まれており、診断も可能です。"
+msgstr "Quarkus Tools for IntelliJを使用したQuteテンプレートには、JavaおよびQuteのバリデーションが含まれており、診断も可能です。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:53
@@ -177,13 +171,12 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:55
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Completion for Qute Value Resolvers"
-msgstr "Qute Value Resolversの完成形"
+msgstr "Qute Value Resolversの補完"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:58
-#, fuzzy
 msgid "Paired with corresponding Java methods, built-in Java classes also have built-in Qute value resolvers made available by the Qute templating engine that are evaluated and output, or resolve to, a value. Quarkus Tools for IntelliJ supports completion, hover and snippet generation for these built-in value resolvers."
 msgstr "対応するJavaメソッドと対になっている組み込みのJavaクラスには、Quteテンプレートエンジンによって利用可能な組み込みのQute値リゾルバがあり、評価されて値を出力、または値に解決します。Quarkus Tools for IntelliJは、これらの組み込み値リゾルバの補完、ホバー、およびスニペット生成をサポートしています。"
 
@@ -195,15 +188,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:61
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Support for @TemplateExtension Methods"
 msgstr "TemplateExtension メソッドのサポート"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:64
-#, fuzzy
 msgid "Template extension methods are used to extend the set of accessible properties of data objects. Qute support in Quarkus Tools for IntelliJ has support for marked `@TemplateExtension` Java methods, which extend a given data model."
-msgstr "テンプレート拡張メソッドは、データオブジェクトのアクセス可能なプロパティのセットを拡張するために使用されます。Quarkus Tools for IntelliJ の Qute サポートでは、マークされた `@TemplateExtension` Java メソッドをサポートしており、指定されたデータモデルを拡張することができます。"
+msgstr "テンプレートエクステンションメソッドは、データオブジェクトのアクセス可能なプロパティのセットを拡張するために使用されます。Quarkus Tools for IntelliJ の Qute サポートでは、マークされた `@TemplateExtension` Java メソッドをサポートしており、指定されたデータモデルを拡張することができます。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:65
@@ -214,15 +206,14 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:67
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:70
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Support for Directly Injecting Beans into Qute Templates"
 msgstr "QuteテンプレートへのBeanの直接注入のサポート"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:72
-#, fuzzy
 msgid "A CDI bean annotated with `@Named` can be referenced in any template through cdi and/or inject namespaces. Quarkus Tools for IntelliJ provides completion and definition navigation support for Beans."
-msgstr " `@Named` でアノテーションされた CDI Bean は、cdi および/または inject 名前空間を通じて、任意のテンプレートで参照することができます。Quarkus Tools for IntelliJは、Beanの補完と定義ナビゲーションのサポートを提供します。"
+msgstr "`@Named` でアノテーションされた CDI Bean は、cdi および/または inject 名前空間を通じて、任意のテンプレートで参照することができます。Quarkus Tools for IntelliJは、Beanの補完と定義ナビゲーションのサポートを提供します。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:73
@@ -232,15 +223,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:75
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Improved features"
-msgstr "機能向上"
+msgstr "改善された機能"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:78
-#, fuzzy
 msgid "In addition to the new Qute support, we've enhanced existing features around MicroProfile 2.0 and Quarkus 2.x new features."
-msgstr "新しいQuteのサポートに加えて、MicroProfile 2.0とQuarkus 2.xの新機能を中心に既存の機能を強化しました。"
+msgstr "新しいQuteのサポートに加えて、MicroProfile 2.0とQuarkus 2.xの新機能を中心に既存の機能を改善しました。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:79
@@ -250,7 +240,6 @@ msgstr "設定の全貌"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:82
-#, fuzzy
 msgid "While we had support for configuration profiles through property prefixing (eg. `%dev.name`), we now also support profile-aware files. We’ve added support for this, and many other features part of the MicroProfile 2.0 release."
 msgstr "これまでにも、プロパティのプレフィックスによる設定プロファイルをサポートしていましたが（例： `%dev.name` ）、今回、プロファイルを意識したファイルもサポートするようになりました。MicroProfile 2.0 のリリースでは、この他にも多くの機能をサポートするようになりました。"
 
@@ -262,9 +251,9 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:85
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "MicroProfile Fault Tolerance"
-msgstr "マイクロプロファイル・フォールトトレラント"
+msgstr "MicroProfile Fault Tolerance"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-23-intellij-quarkus-tools-1.11.0.adoc:88
